--- a/src/styles/components/_widget.scss
+++ b/src/styles/components/_widget.scss
@@ -14,7 +14,7 @@
 
 .widget__message{ 
     border-bottom : 1px solid lighten($lightBlue, 10%);
-    color: $offWhite;
+    color: white;
     margin: 0;
     padding : $l-size;
     text-align: center;
